--- a/ejemplo/app/edit-todo/edit.html
+++ b/ejemplo/app/edit-todo/edit.html
@@ -1,3 +1,3 @@
-<md-content class="md-padding background-gray full-size" layout="row" layout-align='center center '>
-  <unc-edit-card todo="vm.toDo" on-save="vm.save"></unc-edit-card>
+<md-content class="md-padding background-gray full-size" layout="row" layout-align='center center'>
+  <unc-edit-card todo="vm.toDo" on-save="vm.save()"></unc-edit-card>
 </md-content>
