--- a/ejemplo/index.html
+++ b/ejemplo/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html ng-app='todo'>
+<html ng-app='app'>
   <head>
     <meta charset="utf-8">
     <title>Clase 3 - Ejercicio</title>
