--- a/ejemplo/index.html
+++ b/ejemplo/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Clase 3 - Ejercicio</title>
-    <link rel="stylesheet" href="/dist/css/angularProject.css">
+    <link rel="stylesheet" href="/dist/css/angularProject.min.css">
     <link rel="stylesheet" href="/bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="/bower_components/animate.css/animate.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
