Agregado animate.css

--- a/ejemplo/app/view-todo/view.html
+++ b/ejemplo/app/view-todo/view.html
@@ -1,7 +1,7 @@
-<md-content class="md-padding background-gray " layout="row" layout-align='space-around start '>
+<md-content class="md-padding background-gray" layout="row" layout-align='space-around start'>
   <div layout="row" flex='45' layout-wrap >
     <h1 flex='100' class="md-display-1">Para hacer</h1>
-    <md-card ng-repeat="task in vm.toDos | filter: !!isDone" flex="auto" ng-style="{'background-color' : task.color}">
+    <md-card ng-repeat="task in vm.toDos | filter: !!isDone" flex="auto" ng-style="{'background-color' : task.color}" class="flipInX animated">
       <md-card-title>
         <md-card-title-text>
           <span class="md-headline">{{task.titulo}}</span>
@@ -16,7 +16,7 @@
   </div>
   <div layout="row" flex='45' layout-wrap>
     <h1 flex='100' class="md-display-1">Hechas</h1>
-    <md-card ng-repeat="task in vm.toDos | filter: !isDone" flex="auto" ng-style="{'background-color' : task.color}">
+    <md-card ng-repeat="task in vm.toDos | filter: !isDone" flex="auto" ng-style="{'background-color' : task.color}" class="flipInX animated">
       <md-card-title>
         <md-card-title-text>
           <span class="md-headline">{{task.titulo}}</span>
